[package]
name = "dose-response"
version = "2.0.0-dev"
description = "Roguelike game where you play an addict"
authors = ["Tomas Sedovic <tomas@sedovic.cz>"]
homepage = "https://tryjumping.com/dose-response-roguelike/"
repository = "https://github.com/tryjumping/dose-response"
edition = "2021"
license = "AGPL-3.0-or-later"
build = "build.rs"
exclude = ["bin/*", "scripts/*", "replays/*", "screenshots/*", "ci/*",
           "web-src/*", "*.js", "*.css", "*.html",
           "notes.org", "SAVEDGAME.sav", "out-dir-path", "dose-response.log",
           "videos/*", "*.mp4 "]

[[bin]]
name = "dose-response"
path = "src/main.rs"

[[bench]]
name = "pathfinding"
harness = false

[dependencies]
bincode = "1.3"  # For serialising the game save state into a binary format
bitflags = "1.2"
clap = { version = "2.33.3", optional = true }
chrono = { version = "0.4.19", optional = true }
cstr = "0.2.9"
#egui = { git = "https://github.com/emilk/emigui.git" }
#egui = { git = "https://github.com/tomassedovic/emigui.git" }
#egui = { path = "../../3pc/src/github.com/emilk/emigui/egui" }
# NOTE: by disabling default features, we're excluding the bundled font
egui = { version = "0.15", default-features = false, features = ["single_threaded"] }
gl = { version = "0.14", optional = true }
glutin = { version = "0.27", optional = true }
image = { version = "0.23.14", optional = true }
line_drawing = "0.8"
log = "0.4.14"
log-panics = { version = "2.0", features = ["with-backtrace"], optional = true }
num-rational = { version = "0.4.0", default-features = false, features = ["serde"] }
oorandom = { version = "11.1.3" }
rodio = { version = "0.14.0", features = ["vorbis"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = { version = "0.12.0", default-features = false, features = [], optional = true }
time = { version = "0.3.14" }
toml_edit = "0.2.1"
# Update it only when glutin use a new version of winit
winit = "0.25"
webbrowser = "0.5.5"

[build-dependencies]
rusttype = "0.8"
image = "0.23.14"

[dev-dependencies]
bencher = "0.1"

# Only compile winres on Windows targets.
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"


[features]
# NOTE: Add the `mobile-ui` feature to switch to the mobile UI size
# default = ["dev", "mobile-ui"]
default = ["dev"]
# NOTE: Add the `recording` feature to test/record the trailer mode
prod = ["desktop", "glutin-backend", "recording"]
dev = ["desktop", "glutin-backend", "cheating", "replay", "stats", "verifications", "recording"]
test = ["dev", "prod", "all-backends"]
all-backends = ["glutin-backend"]
desktop = ["cli", "fullscreen", "chrono"]
recording = ["prod", "replay"]
# TODO: add a "trailer" feature for the gameplay (not UI) changes under "recording"?
# So you can record a normal game / replay too.

mobile-ui = []
cheating = []
cli = ["clap", "simplelog", "log-panics"]
fullscreen = []
glutin-backend = ["glutin", "gl", "image"]
missed-frames = []
replay = ["chrono"]
stats = []
verifications = []
linux-extra-features = []
macos-extra-features = []
windows-extra-features = []


[profile.release]
codegen-units = 1
lto = true
# We only use debug info for profiling, but not otherwise
#debug = true
